# udiskr

./: Cargo.toml  README.md  flake.nix  install
src/: main.rs
