# cargo-features = ["profile-rustflags"]

[package]
name = "udiskr"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3.31", default-features = false, features = [
  "executor",
] }
rustc-hash = { version = "2.1.1", default-features = false }
zbus = { version = "5.7.0", default-features = false, features = ["async-io"] }

[profile.release]
lto = true
panic = "abort"
# rustflags = ["-Ctarget-cpu=native"]
